--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <!--Es la raiz del proyecto-->
+    </div>
+    <!--principal -->
     <script type="module" src="/src/main.ts"></script>
+    
+    <!--impotacion de los iconos que se van a usar en la aplicacion-->
+    <script type ="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
